--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,9 +11,12 @@ jobs:
       matrix:
         os:
           - ubuntu-22.04
+          - ubuntu-24.04
           - windows-2022
-          - macos-12
+          - windows-2025
+          - macos-13
           - macos-14
+          - macos-15
     env:
       CARGO_TERM_COLOR: always
     runs-on: ${{ matrix.os }}
